@@ -35,6 +35,7 @@ public:
 		LASERPOINTER,
 		SELECTION,
 		POLYGONSELECTION,
+		PAN,
 		ZOOM,
 		INSPECTOR,
 		_LASTTOOL,
